Src/Newt/NewtonDynamics/Import/Newton.h

typedef struct NewtonMesh{} NewtonMesh;
NEWTON_API void NewtonMeshGetIndirectVertexStreams(const NewtonMesh* const mesh,
                           int vertexStrideInByte, dFloat* const vertex, int* const vertexIndices, int* const vertexCount,
                           int normalStrideInByte, dFloat* const normal, int* const normalIndices, int* const normalCount,
                           int uvStrideInByte0, dFloat* const uv0, int* const uvIndices0, int* const uvCount0,
                           int uvStrideInByte1, dFloat* const uv1, int* const uvIndices1, int* const uvCount1);
NEWTON_API void* NewtonMeshBeginHandle (const NewtonMesh* const mesh);
NEWTON_API void NewtonMeshEndHandle (const NewtonMesh* const mesh, void* const handle);
NEWTON_API int NewtonMeshFirstMaterial (const NewtonMesh* const mesh, void* const handle);
NEWTON_API int NewtonMeshNextMaterial (const NewtonMesh* const mesh, void* const handle, int materialId);
NEWTON_API int NewtonMeshMaterialGetMaterial (const NewtonMesh* const mesh, void* const handle, int materialId);
NEWTON_API int NewtonMeshMaterialGetIndexCount (const NewtonMesh* const mesh, void* const handle, int materialId);
NEWTON_API void NewtonMeshMaterialGetIndexStream (const NewtonMesh* const mesh, void* const handle, int materialId, int* const index);
NEWTON_API void NewtonMeshMaterialGetIndexStreamShort (const NewtonMesh* const mesh, void* const handle, int materialId, short int* const index);
NEWTON_API NewtonMesh* NewtonMeshCreateFirstSingleSegment (const NewtonMesh* const mesh);
NEWTON_API NewtonMesh* NewtonMeshCreateNextSingleSegment (const NewtonMesh* const mesh, const NewtonMesh* const segment);
NEWTON_API NewtonMesh* NewtonMeshCreateFirstLayer (const NewtonMesh* const mesh);
NEWTON_API NewtonMesh* NewtonMeshCreateNextLayer (const NewtonMesh* const mesh, const NewtonMesh* const segment);
NEWTON_API int NewtonMeshGetTotalFaceCount (const NewtonMesh* const mesh);
NEWTON_API int NewtonMeshGetTotalIndexCount (const NewtonMesh* const mesh);
NEWTON_API void NewtonMeshGetFaces (const NewtonMesh* const mesh, int* const faceIndexCount, int* const faceMaterial, void** const faceIndices);
NEWTON_API int NewtonMeshGetPointCount (const NewtonMesh* const mesh);
NEWTON_API int NewtonMeshGetPointStrideInByte (const NewtonMesh* const mesh);
NEWTON_API dFloat64* NewtonMeshGetPointArray (const NewtonMesh* const mesh);
NEWTON_API dFloat64* NewtonMeshGetNormalArray (const NewtonMesh* const mesh);
NEWTON_API dFloat64* NewtonMeshGetUV0Array (const NewtonMesh* const mesh);
NEWTON_API dFloat64* NewtonMeshGetUV1Array (const NewtonMesh* const mesh);
NEWTON_API int NewtonMeshGetVertexCount (const NewtonMesh* const mesh);
NEWTON_API int NewtonMeshGetVertexStrideInByte (const NewtonMesh* const mesh);
NEWTON_API dFloat64* NewtonMeshGetVertexArray (const NewtonMesh* const mesh);
NEWTON_API void* NewtonMeshGetFirstVertex (const NewtonMesh* const mesh);
NEWTON_API void* NewtonMeshGetNextVertex (const NewtonMesh* const mesh, const void* const vertex);
NEWTON_API int NewtonMeshGetVertexIndex (const NewtonMesh* const mesh, const void* const vertex);
NEWTON_API void* NewtonMeshGetFirstPoint (const NewtonMesh* const mesh);
NEWTON_API void* NewtonMeshGetNextPoint (const NewtonMesh* const mesh, const void* const point);
NEWTON_API int NewtonMeshGetPointIndex (const NewtonMesh* const mesh, const void* const point);
NEWTON_API int NewtonMeshGetVertexIndexFromPoint (const NewtonMesh* const mesh, const void* const point);
NEWTON_API void* NewtonMeshGetFirstEdge (const NewtonMesh* const mesh);
NEWTON_API void* NewtonMeshGetNextEdge (const NewtonMesh* const mesh, const void* const edge);
NEWTON_API void NewtonMeshGetEdgeIndices (const NewtonMesh* const mesh, const void* const edge, int* const v0, int* const v1);
//NEWTON_API void NewtonMeshGetEdgePointIndices (const NewtonMesh* const mesh, const void* const edge, int* const v0, int* const v1);

NEWTON_API void* NewtonMeshGetFirstFace (const NewtonMesh* const mesh);
NEWTON_API void* NewtonMeshGetNextFace (const NewtonMesh* const mesh, const void* const face);
NEWTON_API int NewtonMeshIsFaceOpen (const NewtonMesh* const mesh, const void* const face);
NEWTON_API int NewtonMeshGetFaceMaterial (const NewtonMesh* const mesh, const void* const face);
NEWTON_API int NewtonMeshGetFaceIndexCount (const NewtonMesh* const mesh, const void* const face);
NEWTON_API void NewtonMeshGetFaceIndices (const NewtonMesh* const mesh, const void* const face, int* const indices);
NEWTON_API void NewtonMeshGetFacePointIndices (const NewtonMesh* const mesh, const void* const face, int* const indices);