Src/Newt/NewtonDynamics/Import/DllImports.cs


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonMeshGetIndirectVertexStreams(IntPtr mesh, int vertexStrideInByte, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] vertex, [MarshalAs(UnmanagedType.LPArray/*, SizeConst = */)]int[] vertexIndices, ref int vertexCount, int normalStrideInByte, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] normal, [MarshalAs(UnmanagedType.LPArray/*, SizeConst = */)]int[] normalIndices, ref int normalCount, int uvStrideInByte0, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] uv0, [MarshalAs(UnmanagedType.LPArray/*, SizeConst = */)]int[] uvIndices0, ref int uvCount0, int uvStrideInByte1, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] uv1, [MarshalAs(UnmanagedType.LPArray/*, SizeConst = */)]int[] uvIndices1, ref int uvCount1);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonMeshBeginHandle(IntPtr mesh);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonMeshEndHandle(IntPtr mesh, IntPtr handle);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonMeshFirstMaterial(IntPtr mesh, IntPtr handle);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonMeshNextMaterial(IntPtr mesh, IntPtr handle, int materialId);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonMeshMaterialGetMaterial(IntPtr mesh, IntPtr handle, int materialId);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonMeshMaterialGetIndexCount(IntPtr mesh, IntPtr handle, int materialId);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonMeshMaterialGetIndexStream(IntPtr mesh, IntPtr handle, int materialId, ref int index);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonMeshMaterialGetIndexStreamShort(IntPtr mesh, IntPtr handle, int materialId, ref short index);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonMeshCreateFirstSingleSegment(IntPtr mesh);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonMeshCreateNextSingleSegment(IntPtr mesh, IntPtr segment);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonMeshCreateFirstLayer(IntPtr mesh);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonMeshCreateNextLayer(IntPtr mesh, IntPtr segment);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonMeshGetTotalFaceCount(IntPtr mesh);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonMeshGetTotalIndexCount(IntPtr mesh);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonMeshGetFaces(IntPtr mesh, [MarshalAs(UnmanagedType.LPArray/*, SizeConst = */)]int[] faceIndexCount, [MarshalAs(UnmanagedType.LPArray/*, SizeConst = */)]int[] faceMaterial, IntPtr faceIndices);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonMeshGetPointCount(IntPtr mesh);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonMeshGetPointStrideInByte(IntPtr mesh);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonMeshGetPointArray(IntPtr mesh);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonMeshGetNormalArray(IntPtr mesh);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonMeshGetUV0Array(IntPtr mesh);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonMeshGetUV1Array(IntPtr mesh);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonMeshGetVertexCount(IntPtr mesh);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonMeshGetVertexStrideInByte(IntPtr mesh);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonMeshGetVertexArray(IntPtr mesh);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonMeshGetFirstVertex(IntPtr mesh);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonMeshGetNextVertex(IntPtr mesh, IntPtr vertex);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonMeshGetVertexIndex(IntPtr mesh, IntPtr vertex);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonMeshGetFirstPoint(IntPtr mesh);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonMeshGetNextPoint(IntPtr mesh, IntPtr point);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonMeshGetPointIndex(IntPtr mesh, IntPtr point);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonMeshGetVertexIndexFromPoint(IntPtr mesh, IntPtr point);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonMeshGetFirstEdge(IntPtr mesh);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonMeshGetNextEdge(IntPtr mesh, IntPtr edge);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonMeshGetEdgeIndices(IntPtr mesh, IntPtr edge, [MarshalAs(UnmanagedType.LPArray/*, SizeConst = */)]int[] v0, [MarshalAs(UnmanagedType.LPArray/*, SizeConst = */)]int[] v1);

		//internal static extern void NewtonMeshGetEdgePointIndices (IntPtr mesh, IntPtr edge, int* const v0, int* const v1);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonMeshGetFirstFace(IntPtr mesh);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonMeshGetNextFace(IntPtr mesh, IntPtr face);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonMeshIsFaceOpen(IntPtr mesh, IntPtr face);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonMeshGetFaceMaterial(IntPtr mesh, IntPtr face);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonMeshGetFaceIndexCount(IntPtr mesh, IntPtr face);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonMeshGetFaceIndices(IntPtr mesh, IntPtr face, [MarshalAs(UnmanagedType.LPArray/*, SizeConst = */)]int[] indices);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonMeshGetFacePointIndices(IntPtr mesh, IntPtr face, [MarshalAs(UnmanagedType.LPArray/*, SizeConst = */)]int[] indices);

		#endregion
	}
}
